--- a/Untitled42.ipynb
+++ b/Untitled42.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMC8TqV6vxQ5sUXtTne0E6Z",
+      "authorship_tag": "ABX9TyNCkgO4MzffhdyMsWkKOhEl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -59,7 +59,7 @@
         }
       ],
       "source": [
-        "# Import required libraries\n",
+        "\n",
         "import pandas as pd\n",
         "from sklearn.pipeline import Pipeline\n",
         "from sklearn.feature_extraction.text import TfidfVectorizer\n",
@@ -67,34 +67,34 @@
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.metrics import accuracy_score, classification_report\n",
         "\n",
-        "# Step 1: Load the dataset\n",
-        "df = pd.read_csv(\"spam.csv\", encoding='latin-1')  # adjust encoding if needed\n",
-        "df = df[['Category', 'Message']]  # Keep only relevant columns\n",
-        "df['spam'] = df['Category'].apply(lambda x: 1 if x == 'spam' else 0)  # Convert target to binary\n",
         "\n",
-        "# Step 2: Split the data into features and labels\n",
+        "df = pd.read_csv(\"spam.csv\", encoding='latin-1')\n",
+        "df = df[['Category', 'Message']]\n",
+        "df['spam'] = df['Category'].apply(lambda x: 1 if x == 'spam' else 0)\n",
+        "\n",
+        "\n",
         "X = df['Message']\n",
         "y = df['spam']\n",
         "\n",
-        "# Step 3: Split the data into training and testing sets\n",
+        "\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.25, random_state=42)\n",
         "\n",
-        "# Step 4: Create a Pipeline for vectorization and model training\n",
+        "\n",
         "model = Pipeline([\n",
-        "    ('vectorizer', TfidfVectorizer()),   # Correct vectorizer\n",
-        "    ('nb', MultinomialNB())             # Naive Bayes classifier\n",
+        "    ('vectorizer', TfidfVectorizer()),\n",
+        "    ('nb', MultinomialNB())\n",
         "])\n",
         "\n",
-        "# Step 5: Train the model\n",
+        "\n",
         "model.fit(X_train, y_train)\n",
         "\n",
-        "# Step 6: Evaluate the model\n",
+        "\n",
         "y_pred = model.predict(X_test)\n",
         "\n",
         "print(\"Model Accuracy:\", accuracy_score(y_test, y_pred))\n",
         "print(\"\\nClassification Report:\\n\", classification_report(y_test, y_pred))\n",
         "\n",
-        "# Step 7: Test the model with sample emails\n",
+        "\n",
         "sample_emails = [\n",
         "    'We have an event of AWS',\n",
         "    'Upto 20% off for shoes',\n",
